syntax = "proto3";

package file.v1;

service FileService {
  // 上传文件
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  // 获取文件信息
  rpc GetFile(GetFileRequest) returns (GetFileResponse);
  // 删除文件
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  // 列出文件
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message File {
  string id = 1;
  string url = 2;
  string mime_type = 3;
  string file_name = 4;
  int64 size = 5;
  string user_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message UploadFileRequest {
  bytes content = 1;
  string file_name = 2;
  string mime_type = 3;
}

message UploadFileResponse {
  File file = 1;
}

message GetFileRequest {
  string file_id = 1;
}

message GetFileResponse {
  File file = 1;
}

message DeleteFileRequest {
  string file_id = 1;
}

message DeleteFileResponse {}

message ListFilesRequest {
  int32 page_size = 1; // 每页数量
  string page_token = 2; // 分页标记
  string user_id = 3; // 可选的用户 ID 过滤
}

message ListFilesResponse {
  repeated File files = 1; // 文件列表
  string next_page_token = 2; // 下一页的标记，如果为空表示没有更多数据
  int32 total_count = 3; // 总文件数
}
